Prevent wrapping of command line options and key combinations

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -266,6 +266,11 @@ body
     }
   }
 
+  .nowrap
+  {
+    white-space: nowrap;
+  }
+
   .center-text
   {
     text-align: center;
